Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-58948

Number of ActiveStreams not exposed to Prometheus

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.6.0
    • 7.6.0
    • couchbase-bucket
    • None
    • Untriaged
    • 0
    • Unknown

    Description

      We have a cbstat for the number of ActiveStreams per Producer, but that is not exposed to Prometheus (see num_streams in DcpProducer::addStats).

      We've hit issues with large numbers of ActiveStreams before. If we have a really large number of ActiveStreams (we've seen ~500K), our "cbstats dcp" call can timeout so it is important to have this metric in Prometheus.

      We should expose that value in Prometheus, possibly aggregated by connection type, like the other DCP stats.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ashwin.govindarajulu Ashwin Govindarajulu
              vesko.karaganev Vesko Karaganev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty