MB-58948: Expose number of Active and Passive Streams to Prometheus

These are aggregated by connection type, e.g.
kv_dcp_stream_count{connection_type="secidx", for="producer"}

Change-Id: I34f51af46b377f0e5f6527bd6ba9fdfbf07d36be
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/199790
Reviewed-by: Vesko Karaganev <vesko.karaganev@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>